src/test/ui/type-ascription/borrow.stderr
error: type ascriptions are not allowed in lvalue contexts
  --> $DIR/borrow.rs:11:12
   |
LL |   let x = &(r : &Foo);
   |            ^^^^^^^^^^
   |
help: try to use the type ascription when creating the local variable
   |
LL | let r: &Foo = &mut foo;
   | ^^^^^^^^^^^

error: type ascriptions are not allowed in lvalue contexts
  --> $DIR/borrow.rs:14:22
   |
LL |   let another_one = &(r : &Foo).a;
   |                      ^^^^^^^^^^
   |
help: try to use the type ascription when creating the local variable
   |
LL | let r: &Foo = &mut foo;
   | ^^^^^^^^^^^

error: type ascriptions are not allowed in lvalue contexts
  --> $DIR/borrow.rs:19:23
   |
LL |   let ref last_one = &(arr_ref : &[u32])[1];
   |                       ^^^^^^^^^^^^^^^^^^
   |
help: try to use the type ascription when creating the local variable
   |
LL | let arr_ref: &[u32] = &arr;
   | ^^^^^^^^^^^^^^^^^^^

error: type ascriptions are not allowed in lvalue contexts
  --> $DIR/borrow.rs:19:23
   |
LL |   let ref last_one = &(arr_ref : &[u32])[1];
   |                       ^^^^^^^^^^^^^^^^^^
   |
help: try to use the type ascription when creating the local variable
   |
LL | let arr_ref: &[u32] = &arr;
   | ^^^^^^^^^^^^^^^^^^^

error: type ascriptions are not allowed in lvalue contexts
  --> $DIR/borrow.rs:19:23
   |
LL |   let ref last_one = &(arr_ref : &[u32])[1];
   |                       ^^^^^^^^^^^^^^^^^^
   |
help: try to use the type ascription when creating the local variable
   |
LL | let arr_ref: &[u32] = &arr;
   | ^^^^^^^^^^^^^^^^^^^

error: aborting due to 5 previous errors

